--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <iframe> 
-    src="https://www.youtube.com/watch?v=G-KOKL23lEM?autoplay=1&controls=0&rel=0&mute=1"
+    src="https://www.youtube.com/embed/G-KOKL23lEM?autoplay=1&controls=0&rel=0&mute=1"
     allow="autoplay; encrypted-media"
     allowfullscreen>
   </iframe>
