--- a/index.html
+++ b/index.html
@@ -22,10 +22,6 @@
   </style>
 </head>
 <body>
-  <iframe> 
-    src="https://www.youtube.com/embed/G-KOKL23lEM?autoplay=1&controls=0&rel=0&mute=1"
-    allow="autoplay; encrypted-media"
-    allowfullscreen>
-  </iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G-KOKL23lEM?si=Pf4HLUoTCn33AiwV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
