--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   </style>
 </head>
 <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/G-KOKL23lEM?si=Pf4HLUoTCn33AiwV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/G-KOKL23lEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="no-referrer" allowfullscreen></iframe>
 </body>
 </html>
