--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Welcome</title>
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: black;
-      overflow: hidden;
-    }
-    iframe {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      width: 100vw;
-      height: 100vh;
-      border: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Vacation Game Master</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/G-KOKL23lEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="no-referrer" allowfullscreen></iframe>
+    <header>
+        <h1>Vacation Game Master</h1>
+        <p>Fun games to play while waiting in line!</p>
+    </header>
+    <main>
+        <section class="game-list">
+            <a href="games/box_office_bonanza.html" class="game-button">Box Office Bonanza</a>
+            <!-- Add more game buttons here later -->
+        </section>
+    </main>
+    <script src="scripts.js"></script>
 </body>
 </html>
