--- a/games/box_office_bonanza.html
+++ b/games/box_office_bonanza.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="Fun game to play while waiting in line!">
+    <meta name="keywords" content="game-master, box-office-bonanza, game">
+    <meta name="description" content="Box Office Bonanza - guess the movie revenue!">
+    <meta name="author" content="Your Name">
     <title>Box Office Bonanza</title>
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="box_office_bonanza.css">
@@ -17,7 +20,7 @@
             <h2>Setup Players</h2>
             <div id="player-list">
                 <div class="player-entry">
-                    <input type="text" class="player-name" placeholder="Player Name">
+                    <input type="text" class="player-name" id="player-name" placeholder="Player Name">
                     <button class="remove-player">Remove</button>
                 </div>
             </div>
@@ -37,6 +40,9 @@
             <button id="reset-game">New Game</button>
         </section>
     </main>
+    <footer>
+        <p>Data provided by <a href="https://www.themoviedb.org/">TMDb</a></p>
+    </footer>
     <script src="../config.js"></script>
     <script src="../scripts.js"></script>
     <script src="box_office_bonanza.js"></script>
