--- a/games/box_office_bonanza.html
+++ b/games/box_office_bonanza.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="Fun game to play while waiting in line!">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="game-master, box-office-bonanza, game">
     <meta name="description" content="Box Office Bonanza - guess the movie revenue!">
     <meta name="author" content="Your Name">
