--- a/games/box_office_bonanza.html
+++ b/games/box_office_bonanza.html
@@ -20,7 +20,7 @@
             <h2>Setup Players</h2>
             <div id="player-list">
                 <div class="player-entry">
-                    <input type="text" class="player-name" id="player-name" placeholder="Player Name">
+                    <input type="text" class="player-name" placeholder="Player Name">
                     <button class="remove-player">Remove</button>
                 </div>
             </div>
