--- a/games/box_office_bonanza.html
+++ b/games/box_office_bonanza.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="game-master, box-office-bonanza, game">
-    <meta name="description" content="Box Office Bonanza - guess the movie revenue!">
+    <meta name="description" content="Box Office Bonanza">
     <meta name="author" content="Your Name">
     <title>Box Office Bonanza</title>
     <link rel="stylesheet" href="../styles.css">
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1>Box Office Bonanza</h1>
-        <p>Guess the worldwide box office earnings of a randomly selected film!</p>
+        <p>Guess the Box Office of Movies</p>
     </header>
     <main>
         <section id="player-setup" style="display: block;">
@@ -40,9 +40,6 @@
             <button id="reset-game">New Game</button>
         </section>
     </main>
-    <footer>
-        <p>Data provided by <a href="https://www.themoviedb.org/">TMDb</a></p>
-    </footer>
     <script src="../config.js"></script>
     <script src="../scripts.js"></script>
     <script src="box_office_bonanza.js"></script>
