--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <h1>Vacation Game Master</h1>
-        <p>Fun games to play while waiting in line!</p>
+        <p>Games to play while waiting in line</p>
     </header>
     <main>
         <section class="game-list">
             <a href="games/box_office_bonanza.html" class="game-button">Box Office Bonanza</a>
-            <!-- Add more game buttons here later -->
+            <a href="games/actors_assemble.html" class="game-button">Actors Assemble</a>
         </section>
     </main>
     <script src="scripts.js"></script>
