Polish Movie Riddle loading and TMDB request flow

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <section class="game-list">
             <a href="games/box_office_bonanza.html" class="game-button">Box Office Bonanza</a>
             <a href="games/actors_assemble.html" class="game-button">Actors Assemble</a>
+            <a href="games/movie_riddle.html" class="game-button">Movie Riddle</a>
         </section>
     </main>
     <script src="scripts.js"></script>
