Refresh site styling and fix Actors Assemble guess scoring

--- a/games/actors_assemble.html
+++ b/games/actors_assemble.html
@@ -29,6 +29,7 @@
         </section>
         <section id="game-area" style="display: none;">
             <div id="film-info"></div>
+            <div id="round-points" aria-live="polite"></div>
             <div id="actor-info"></div>
             <div id="player-inputs"></div>
             <button id="submit-guesses">Submit Guesses</button>
