Add Six Degrees of AndrewHanes game mode

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
                     <span class="game-title">Movie Riddle</span>
                     <span class="game-description">Solve progressive clues before your three guesses run out.</span>
                 </a>
+                <a href="games/six_degrees_andrewhanes.html" class="game-button">
+                    <span class="game-title">Six Degrees of AndrewHanes.com</span>
+                    <span class="game-description">Connect Actor A to Actor B through shared films in the fewest moves.</span>
+                </a>
             </section>
         </main>
     </div>
